Added more words.

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Random words will be selected from the dictionary and you have to provide the tr
 
 == Notes
 - Romanian-English dictionary is located in js/dictionary.js
+
+- present continuous: I am studying English.
