--- a/README
+++ b/README
@@ -5,3 +5,4 @@ Random words will be selected from the dictionary and you have to provide the tr
 - Romanian-English dictionary is located in js/dictionary.js
 
 - present continuous: I am studying English.
+- past simple: I lived in France for 2 years.
