--- a/README
+++ b/README
@@ -6,3 +6,4 @@ Random words will be selected from the dictionary and you have to provide the tr
 
 - present continuous: I am studying English.
 - past simple: I lived in France for 2 years.
+- present perfect (has/have + vb la trecut): I have lived in London since 2010.
