--- a/README
+++ b/README
@@ -7,5 +7,6 @@ Random words will be selected from the dictionary and you have to provide the tr
 - present continuous: I am studying English.
 - past simple: I lived in France for 2 years.
 - present perfect (has/have + vb la trecut): I have lived in London since 2010.
+- past perfect: I they had more time, they would do more sport.
 
 - I FUTURE_TENSE if PRESENT_TENSE: I will go shopping this afternoon if I have time.
