--- a/README
+++ b/README
@@ -9,5 +9,7 @@ Random words will be selected from the dictionary and you have to provide the tr
 - present perfect (has/have + vb la trecut): I have lived in London since 2010.
 - past perfect: I they had more time, they would do more sport.
 - present perfect continuous: I have been eating fish for the past two days.
+- past perfect continuous: I had been preparing the dinner.
+- conditional: If I had gone to the restaurant last night, I would have eaten a steak.
 
 - I FUTURE_TENSE if PRESENT_TENSE: I will go shopping this afternoon if I have time.
